# DL-from-scratch-3

./: .gitignore  LICENSE  README.md
study/: base_class.py  functions.py  pyproject.toml  util.py
study/dezero/: __init__.py  core.py  core_simple.py  datasets.py  functions.py  layers.py  models.py  optimizers.py  torch.py  utils.py
study/steps_01-05/: README.md  base_class.py  functions.py  main.py  numerical_diff_impl.py
study/steps_06-10/: README.md  main.py
study/steps_11-16/: README.md  main.py
study/steps_17-22/: README.md  main.py
study/steps_23-26/: README.md  main.py  sample.dot
study/steps_27-32/: README.md  step28.py  steps27.py
study/steps_33-36/: README.md  main.py
study/steps_37-40/: README.md  main.py
study/steps_41-44/: README.md  main.py
study/steps_45-47/: README.md  main.py
study/steps_48-52/: README.md  main.py
study/test_dir/: test_func.py
