[tool.poetry]
name = "dezero-yhsong"
version = "0.1.0"
description = "for study"
authors = ["Yunho Song <dbsgh3322@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.2.3"
graphviz = "^0.20.3"
matplotlib = "^3.10.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
